exports[`HSL-API should be able to get route 1`] = `
Array [
  Object {
    "duration": 3057,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1200.5520000000001,
        "duration": 970,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 2734,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 71.361,
        "duration": 57,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Kivistön asema",
        },
      },
      Object {
        "distance": 1062.0804831595224,
        "duration": 180,
        "from": Object {
          "name": "Kivistön asema",
        },
        "mode": "BUS",
        "route": Object {
          "shortName": "433",
        },
        "to": Object {
          "name": "Liusketie",
        },
      },
      Object {
        "distance": 205.883,
        "duration": 167,
        "from": Object {
          "name": "Liusketie",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 3774,
    "legs": Array [
      Object {
        "distance": 897.4159999999999,
        "duration": 764,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 30410.431214842498,
        "duration": 2040,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "I",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1198.9080000000001,
        "duration": 968,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
]
`;

exports[`HSL-API should be able to get route with arriveBy 1`] = `
Array [
  Object {
    "duration": 3057,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1199.6000000000001,
        "duration": 970,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 2986,
    "legs": Array [
      Object {
        "distance": 468.127,
        "duration": 383,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Hki linja-autoasema",
        },
      },
      Object {
        "distance": 17452.411906026977,
        "duration": 1320,
        "from": Object {
          "name": "Hki linja-autoasema",
        },
        "mode": "BUS",
        "route": Object {
          "shortName": "485",
        },
        "to": Object {
          "name": "Keimola",
        },
      },
      Object {
        "distance": 1561.0849999999996,
        "duration": 1281,
        "from": Object {
          "name": "Keimola",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 3286,
    "legs": Array [
      Object {
        "distance": 468.127,
        "duration": 383,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Hki linja-autoasema",
        },
      },
      Object {
        "distance": 17452.411906026977,
        "duration": 1620,
        "from": Object {
          "name": "Hki linja-autoasema",
        },
        "mode": "BUS",
        "route": Object {
          "shortName": "456",
        },
        "to": Object {
          "name": "Keimola",
        },
      },
      Object {
        "distance": 1561.0849999999996,
        "duration": 1281,
        "from": Object {
          "name": "Keimola",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
]
`;
